--- a/app/src/main/res/layout/fragment_home_tab.xml
+++ b/app/src/main/res/layout/fragment_home_tab.xml
@@ -72,30 +72,53 @@
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft2"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
 
-            <TextView
-                android:id="@+id/txtTotalBalance"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/lntTotalBalance"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:textAlignment="center"
-                android:textAppearance="@style/textAppearance.size40"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="@+id/guidelineRight2"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft2"
-                app:layout_constraintTop_toBottomOf="@+id/text_total_balance"
-                tools:text="$1,200" />
+                app:layout_constraintTop_toBottomOf="@+id/text_total_balance">
 
-            <ImageView
-                android:id="@+id/image_eye"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/android_standard_margin"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/ic_eye_gray"
-                app:layout_constraintBottom_toBottomOf="@+id/txtTotalBalance"
-                app:layout_constraintStart_toEndOf="@+id/txtTotalBalance"
-                app:layout_constraintTop_toTopOf="@+id/txtTotalBalance" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/txtTotalBalance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:layout_gravity="center_vertical"
+                        android:textAppearance="@style/textAppearance.size25"
+                        tools:text="2LC 1,206,574" />
+
+                    <ImageView
+                        android:id="@+id/image_eye"
+                        style="@style/icon.medium.padding"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/spacing_normal"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:src="@drawable/ic_eye_gray" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/txtTotalBalanceDollar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/textAppearance.size16"
+                    tools:text="$1,200" />
+
+            </LinearLayout>
 
 
             <androidx.constraintlayout.widget.Barrier
@@ -104,7 +127,7 @@
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
                 app:barrierMargin="@dimen/margin_xxxlarge"
-                app:constraint_referenced_ids="txtTotalBalance" />
+                app:constraint_referenced_ids="lntTotalBalance" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewWallets"
