--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -120,6 +120,10 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="textAppearance.size25">
+        <item name="android:textSize">25sp</item>
+    </style>
+
     <style name="textAppearance.size16.bold">
         <item name="android:textStyle">bold</item>
     </style>
