--- a/app/src/main/res/values/styles_image.xml
+++ b/app/src/main/res/values/styles_image.xml
@@ -31,7 +31,7 @@
     </style>
 
     <style name="icon.normal.padding">
-        <item name="android:padding">@dimen/padding_small</item>
+        <item name="android:padding">@dimen/padding_xsmall</item>
     </style>
 
     <style name="icon.medium">
