--- a/app/src/main/res/layout/fragment_market_list.xml
+++ b/app/src/main/res/layout/fragment_market_list.xml
@@ -5,49 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="@dimen/spacing_large"
-        app:cardBackgroundColor="@color/white_trans"
-        app:cardCornerRadius="@dimen/border_radius_normal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="@dimen/spacing_small">
-
-            <ImageView
-                android:id="@+id/img_search"
-                style="@style/icon.large.padding"
-                app:srcCompat="@drawable/ic_search" />
-
-            <EditText
-                android:id="@+id/edt_search"
-                style="@style/editText.singleLine"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/spacing_small"
-                android:layout_marginEnd="@dimen/spacing_normal"
-                android:background="@android:color/transparent"
-                android:gravity="start|center_vertical"
-                android:hint="@string/fragment_market_place_search_hint"
-                android:imeOptions="actionSearch"
-                android:textAppearance="@style/textAppearance.size14" />
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_margin="@dimen/spacing_large"
+        android:background="@drawable/bg_white_trans_radius_normal"
+        android:elevation="@dimen/elevation_normal"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_small">
+
+        <ImageView
+            android:id="@+id/img_search"
+            style="@style/icon.large.padding"
+            app:srcCompat="@drawable/ic_search" />
+
+        <EditText
+            android:id="@+id/edt_search"
+            style="@style/editText.singleLine"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:background="@android:color/transparent"
+            android:gravity="start|center_vertical"
+            android:hint="@string/fragment_market_place_search_hint"
+            android:imeOptions="actionSearch"
+            android:textAppearance="@style/textAppearance.size14" />
+    </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/progress_circular"
