--- a/app/src/main/res/drawable/selector_button_secondary_solid.xml
+++ b/app/src/main/res/drawable/selector_button_secondary_solid.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="false">
     <shape>
-        <solid android:color="@color/button_brown"/>
+        <solid android:color="@color/secondaryColor"/>
         <corners android:radius="@dimen/standard_button_radius"/>
         <padding android:bottom="@dimen/android_standard_margin" android:left="@dimen/android_standard_margin" android:right="@dimen/android_standard_margin" android:top="@dimen/android_standard_margin" />
 
@@ -11,7 +11,7 @@
 </item>
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/button_brown_pressed"/>
+            <solid android:color="@color/secondaryColorVariant"/>
             <corners android:radius="@dimen/standard_button_radius"/>
             <padding android:bottom="@dimen/android_standard_margin" android:left="@dimen/android_standard_margin" android:right="@dimen/android_standard_margin" android:top="@dimen/android_standard_margin" />
 
